feat: Added handlers to api_gateway for uploading avatars
